# Support-Codes

Bash/: deploy-ai-models.sh  pre-commit.sh
DSA-AI-Models/: CellVIT.ipynb  FastAPI.ipynb  Mask.ipynb  MobileSAM.ipynb  OnclickRunning.ipynb  SAM onclick.ipynb  SAM.ipynb  contours.ipynb  monai.ipynb
Learning/Docker/DockerCLI/: Dockerfile
Learning/Docker/DockerCompose/: Dockerfile
Learning/DockerDebugging/: Dockerfile  hello.py
Learning/Monai/: Monai 3d to 2d slice inferer.ipynb  Monai CORE end to end.ipynb  Monai CORE unetr.ipynb  Monai CORE.ipynb  Monai Slice by slice inference.ipynb
Learning/Poetry/training/: pyproject.toml
Learning/Pyspy/: docker-compose.yml
Learning/Pyspy/app/: Dockerfile  run.py
Learning/Pyspy/pyspy/: Dockerfile
Learning/TiffExp/: dask_exp.ipynb  dask_for_overlap.ipynb  output.json  overlap_nuclei.json  overlapping_large_image.json  shapely.ipynb  shapelyJson.ipynb  synthetic_overlap.json  testTiffFiles.ipynb  testcodes.ipynb
Learning/Web/: requrests.ipynb
