[tool.poetry]
name = "training"
version = "0.1.0"
description = ""
authors = ["Subin Erattakulangara <s.erattakulangara@kitware.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
